--- a/app/src/main/res/layout/content_filter.xml
+++ b/app/src/main/res/layout/content_filter.xml
@@ -5,25 +5,86 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+    android:orientation="vertical"
+    android:weightSum="11"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ts.mobilelab.goggles4u.FilterActivity"
-    android:weightSum="4"
     tools:showIn="@layout/activity_filter">
 
 
-    <fragment
-        android:layout_width="0dip"
-        android:layout_height="match_parent"
-        android:name="com.ts.mobilelab.goggles4u.views.utils.LeftMenuFragment"
-        android:layout_weight="1"
-        android:id="@+id/fragment_left" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10"
+        android:orientation="horizontal">
 
-    <fragment
-        android:layout_width="0dip"
-        android:layout_height="match_parent"
-        android:name="com.ts.mobilelab.goggles4u.views.utils.FilterDetailsListFragment"
-        android:id="@+id/fragment_right"
-        android:layout_weight="3"
-        android:layout_gravity="center_vertical" />
+        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/recycler_filter_list"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:context="com.ts.mobilelab.goggles4u.FilterActivity"
+            tools:text="Left Recycler">
+
+
+        </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/recycler_filter_options"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:context="com.ts.mobilelab.goggles4u.FilterActivity"
+            tools:text="Right Recycler">
+
+
+        </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/view_savefilter"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/btn_clearfilter"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/gray"
+            android:text="Clear Filter"
+            android:textColor="@color/white"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/btn_savefilter"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/active_green"
+            android:text="Apply"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
+    <!--<fragment-->
+    <!--android:layout_width="0dip"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:name="com.ts.mobilelab.goggles4u.views.utils.LeftMenuFragment"-->
+    <!--android:layout_weight="1"-->
+    <!--android:id="@+id/fragment_left" />-->
+
+    <!--<fragment-->
+    <!--android:layout_width="0dip"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:name="com.ts.mobilelab.goggles4u.views.utils.FilterDetailsListFragment"-->
+    <!--android:id="@+id/fragment_right"-->
+    <!--android:layout_weight="3"-->
+    <!--android:layout_gravity="center_vertical" />-->
 </LinearLayout>
 
