--- a/app/src/main/res/layout/view_filter_option_item.xml
+++ b/app/src/main/res/layout/view_filter_option_item.xml
@@ -4,13 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="8dp"
-    android:paddingTop="8dp">
+    android:padding="8dp">
 
 
     <CheckBox
         android:id="@+id/checkbox_filter_option"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:button="@null"
