--- a/app/src/main/res/layout/content_filter.xml
+++ b/app/src/main/res/layout/content_filter.xml
@@ -23,7 +23,7 @@
             android:id="@+id/recycler_filter_list"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="4"
             tools:context="com.ts.mobilelab.goggles4u.FilterActivity"
             tools:text="Left Recycler">
 
@@ -35,7 +35,7 @@
             android:id="@+id/recycler_filter_options"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="6"
             tools:context="com.ts.mobilelab.goggles4u.FilterActivity"
             tools:text="Right Recycler">
 
@@ -55,7 +55,7 @@
         <Button
             android:id="@+id/btn_clearfilter"
             android:layout_width="0dip"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/gray"
             android:text="Clear Filter"
@@ -65,7 +65,7 @@
         <Button
             android:id="@+id/btn_savefilter"
             android:layout_width="0dip"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/active_green"
             android:text="Apply"
