--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#078c05</color>
     <color name="white">#FFFFFF</color>
     <color name="light_gray">#bdbdbd</color>
+    <color name="filter_select">#e6e6e6</color>
     <!-- <color name="deep_gray">#9e9e9e</color>
 -->
     <color name="light_blue">#5BE9FE</color>
