--- a/app/src/main/res/layout/activity_upload_prescription.xml
+++ b/app/src/main/res/layout/activity_upload_prescription.xml
@@ -3,17 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ts.mobilelab.goggles4u.UploadPrescriptionActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_upload_pres">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/prescription_name"
@@ -31,52 +30,71 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/prescription_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/prompt_email"
-        android:inputType="textEmailAddress"
-        android:maxLines="1"
-        android:singleLine="true" />
+        <EditText
+            android:id="@+id/prescription_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/prompt_email"
+            android:inputType="textEmailAddress"
+            android:maxLines="1"
+            android:singleLine="true" />
 
     </android.support.design.widget.TextInputLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
         android:text="Upload Image from"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btn_upload_gallery"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="Gallery"
-            android:id="@+id/btn_upload_gallery" />
+            android:layout_weight="1"
+            android:background="@drawable/camera"
+            android:textColor="@color/white"
+            android:text="Gallery" />
+
+        <View
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            />
 
         <Button
+            android:id="@+id/btn_upload_camera"
+            android:background="@drawable/camera"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:textColor="@color/white"
             android:layout_height="wrap_content"
-            android:text="Camera"
-            android:id="@+id/btn_upload_camera" />
+            android:layout_weight="1"
+            android:text="Camera" />
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_prescription_submit"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
-        android:id="@+id/btn_prescription_submit" />
+        android:background="@drawable/upload_prescription_btn"
+        android:textColor="@color/white"
+        android:text="Submit" />
+
+    <ImageView
+        android:id="@+id/image_upload"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
