--- a/app/src/main/res/layout/content_filter.xml
+++ b/app/src/main/res/layout/content_filter.xml
@@ -53,7 +53,7 @@
         android:weightSum="2">
 
         <Button
-            android:id="@+id/btn_clearfilter"
+            android:id="@+id/btn_clear"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -63,7 +63,7 @@
             android:visibility="visible" />
 
         <Button
-            android:id="@+id/btn_savefilter"
+            android:id="@+id/btn_apply"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
