--- a/app/src/main/res/layout/content_help_center.xml
+++ b/app/src/main/res/layout/content_help_center.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
+        android:layout_marginTop="15dp"
         android:orientation="vertical">
 
         <TextView
@@ -34,8 +35,18 @@
         <Button
             android:layout_width="wrap_content"
             android:text="Call us"
+            android:layout_margin="5dp"
             android:layout_gravity="center"
             android:onClick="dialPhoneNumber"
+            android:background="@drawable/call_btn"
+            android:drawableLeft="@drawable/ic_call"
+            android:textColor="#FFFFFF"
+            android:paddingLeft="40dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="40dp"
+            android:paddingRight="40dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:layout_height="wrap_content" />
         <TextView
             android:layout_width="wrap_content"
