--- a/app/src/main/res/layout/view_filter_option_item.xml
+++ b/app/src/main/res/layout/view_filter_option_item.xml
@@ -14,5 +14,18 @@
         android:layout_gravity="center_horizontal"
         android:button="@null"
         android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
-        tools:text="Filter Options" />
+        tools:text="Filter Options"
+        android:visibility="gone"/>
+
+    <RadioButton
+        android:id="@+id/radio_filter_option"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:button="@null"
+        android:drawableRight="@android:drawable/btn_radio"
+        android:text="filter"
+        android:visibility="visible"/>
+
+
 </LinearLayout>
