--- a/app/src/main/res/layout/home_menu_view.xml
+++ b/app/src/main/res/layout/home_menu_view.xml
@@ -2,84 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/nav_bg_grey_light"
     android:orientation="vertical">
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="@color/light_gray"></View>
+
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:visibility="gone"
-        android:orientation="horizontal"
-        android:padding="8dip">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="30dip"
-            android:minWidth="30dip"
-            android:padding="4dip"
-            android:src="@drawable/ic_home_24dp" />
-
-        <TextView
-            android:id="@+id/nav_home"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:paddingLeft="24dip"
-            android:text="Home"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="normal" />
-
-    </LinearLayout>
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:visibility="gone"
-
-        android:background="@color/light_gray"></View>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="8dip">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="30dip"
-            android:minWidth="30dip"
-            android:padding="4dip"
-            android:src="@drawable/ic_person_24dp" />
-
-        <TextView
-            android:id="@+id/nav_my_account"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:paddingLeft="24dip"
-            android:text="My Account"
-            android:textColor="@color/deep_gray"
-            android:textSize="16sp"
-            android:textStyle="normal" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="@color/light_gray"></View>
-
-    <LinearLayout
+        android:id="@+id/nav_myorder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -95,77 +23,11 @@
             android:src="@drawable/ic_my_library_books_24dp" />
 
         <TextView
-            android:id="@+id/nav_myorder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:paddingLeft="24dip"
-            android:text="My Orders"
-            android:textColor="@color/deep_gray"
-            android:textSize="16sp"
-            android:textStyle="normal" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="@color/light_gray"></View>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="8dip">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="30dip"
-            android:minWidth="30dip"
-            android:padding="4dip"
-            android:src="@drawable/ic_perm_phone_msg_24dp" />
-
-        <TextView
-            android:id="@+id/nav_rateus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:paddingLeft="24dip"
-            android:text="Contact Us"
-            android:textColor="@color/deep_gray"
-            android:textSize="16sp"
-            android:textStyle="normal" />
-
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="@color/light_gray"></View>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="8dip">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="30dip"
-            android:minWidth="30dip"
-            android:padding="4dip"
-            android:src="@drawable/ic_live_help_24dp" />
-
-        <TextView
-            android:id="@+id/nav_help"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:paddingLeft="24dip"
-            android:text="Help Center"
+            android:text="@string/my_orders"
             android:textColor="@color/deep_gray"
             android:textSize="16sp"
             android:textStyle="normal" />
@@ -173,38 +35,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="8dip">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="30dip"
-            android:minWidth="30dip"
-            android:padding="4dip"
-            android:src="@drawable/ic_live_help_24dp" />
-
-        <TextView
-            android:id="@+id/nav_upload_prescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:paddingLeft="24dip"
-            android:text="Upload Prescription"
-            android:textColor="@color/deep_gray"
-            android:textSize="16sp"
-            android:textStyle="normal" />
-
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="@color/light_gray"></View>
-
-    <LinearLayout
+        android:id="@+id/nav_favorite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -220,15 +51,141 @@
             android:src="@drawable/ic_fav_24dp" />
 
         <TextView
-            android:id="@+id/nav_favorite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:paddingLeft="24dip"
-            android:text="Fav. items"
+            android:text="@string/favorites"
             android:textColor="@color/deep_gray"
             android:textSize="16sp"
             android:textStyle="normal" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/nav_upload_prescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="8dip">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="30dip"
+            android:minWidth="30dip"
+            android:padding="4dip"
+            android:src="@drawable/ic_fav_24dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:paddingLeft="24dip"
+            android:text="@string/upload_prescription"
+            android:textColor="@color/deep_gray"
+            android:textSize="16sp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/black" />
+
+
+    <LinearLayout
+        android:id="@+id/nav_my_account"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="8dip">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="30dip"
+            android:minWidth="30dip"
+            android:padding="4dip"
+            android:src="@drawable/ic_person_24dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:paddingLeft="24dip"
+            android:text="@string/my_account"
+            android:textColor="@color/deep_gray"
+            android:textSize="16sp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/nav_help"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="8dip">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="30dip"
+            android:minWidth="30dip"
+            android:padding="4dip"
+            android:src="@drawable/ic_live_help_24dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:paddingLeft="24dip"
+            android:text="@string/help_center"
+            android:textColor="@color/deep_gray"
+            android:textSize="16sp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/nav_settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="8dip">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="30dip"
+            android:minWidth="30dip"
+            android:padding="4dip"
+            android:src="@drawable/ic_live_help_24dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:paddingLeft="24dip"
+            android:text="@string/settings"
+            android:textColor="@color/deep_gray"
+            android:textSize="16sp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
+
+
 </LinearLayout>
