--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/nav_bg_grey_light"
+    android:gravity="center_vertical"
 
-    android:background="@color/white"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:padding="8dip">
 
-   >
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="30dip"
+        android:minWidth="30dip"
+        android:padding="4dip"
+        android:src="@drawable/ic_home_24dp" />
 
     <TextView
         android:id="@+id/lblListHeader"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:gravity="center_vertical"
-        android:padding="14dip"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:paddingStart="35dip"
-        android:text="sdfsfsfsf"
+        android:paddingLeft="24dip"
+        android:text="@string/home"
         android:textColor="@color/deep_gray"
         android:textSize="16sp"
-
         android:textStyle="normal" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
 
-        android:background="@color/light_gray"></View>
 </LinearLayout>
