--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,14 +10,13 @@
         android:id="@+id/lblListItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:drawableLeft="@drawable/ic_navigate_next_24dp"
+        android:background="@color/nav_bg_grey_dark"
         android:gravity="center_vertical"
         android:padding="8dip"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingStart="30dip"
+        android:paddingLeft="80dip"
+        android:paddingStart="80dip"
         android:text="dsdcsdsads"
-        android:textColor="@color/gray"
+        android:textColor="@color/black"
 
         android:textSize="16sp" />
 
