--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -75,4 +75,8 @@
     <color name="spinner_base_color">#44000000</color>
 
     <color name="black_overlay">#66000000</color>
+
+    <!--Navigation Colors-->
+    <color name="nav_bg_grey_dark">#EFEFEF</color>
+    <color name="nav_bg_grey_light">#F8F8F8</color>
 </resources>
