--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,8 +5,8 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/nav_bg_grey_light"
     android:fitsSystemWindows="true"
-
     tools:openDrawer="start">
 
     <include
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/white"
+        android:background="@color/nav_bg_grey_dark"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_home"
         app:itemIconTint="@color/white"
