--- a/app/src/main/res/layout/collectionimg_item.xml
+++ b/app/src/main/res/layout/collectionimg_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="4dip"
+    android:layout_height="180dp"
     android:gravity="center_vertical"
+    android:padding="8dp"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imv_colection"
-        android:layout_width="136dip"
-        android:layout_height="92dip"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginRight="4dip" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_call"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/tv_header"
@@ -22,7 +22,8 @@
         android:text="Medium Text"
         android:textColor="#222"
         android:textSize="13sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tv_details"
@@ -36,5 +37,6 @@
         android:paddingRight="2dip"
         android:text="New Text"
         android:textColor="#666"
-        android:textSize="10sp" />
+        android:textSize="10sp"
+        android:visibility="gone"/>
 </LinearLayout>
