--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,195 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/home_bg_grey"
     android:orientation="vertical"
-    android:paddingBottom="4dip"
-
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ts.mobilelab.goggles4u.HomeActivity"
     tools:showIn="@layout/app_bar_home">
 
-
-    <LinearLayout
-       android:layout_width="match_parent"
-       android:id="@+id/linearhome_header"
-       android:weightSum="3"
-       android:visibility="visible"
-       android:orientation="vertical"
-       android:layout_height="wrap_content">
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager_home"
+    <ListView
+        android:id="@+id/listviewRecycler"
         android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_gravity="center_vertical"
-
-        android:layout_weight="1.0" />
-
-
-
-   <com.viewpagerindicator.CirclePageIndicator
-        android:id="@+id/indicator"
-        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dip" />
-   <!-- <com.androidopentutorials.imageslideshow.utils.CirclePageIndicator
-        android:id="@+id/indicator"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-
-        android:padding="10dip" />&ndash;&gt;-->
-    <RelativeLayout
-        android:id="@+id/relativ1"
-        android:layout_width="match_parent"
-
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/txts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="@string/newarrival"
-            android:textColor="@color/light_gray"
-            android:textSize="@dimen/textsize"
-            android:textStyle="bold" />
-
-        <View
-            android:id="@+id/view11"
-            android:layout_width="wrap_content"
-            android:layout_height="1dip"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="7dip"
-            android:layout_marginTop="4dip"
-            android:layout_toLeftOf="@+id/txts"
-            android:background="@color/light_gray" />
-
-        <View
-            android:id="@+id/view21"
-            android:layout_width="wrap_content"
-            android:layout_height="1dip"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="7dip"
-
-            android:layout_toRightOf="@+id/txts"
-            android:background="@color/light_gray" />
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-
-        android:layout_gravity="center"
-        android:layout_weight="1.0"
-        android:orientation="horizontal">
-
-        <com.ts.mobilelab.goggles4u.utils.HorizontalListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            >
-
-        </com.ts.mobilelab.goggles4u.utils.HorizontalListView>
-
-    </LinearLayout>
+        android:divider="@color/transparent"
+        android:layout_marginTop="?actionBarSize" />
 
     <RelativeLayout
-        android:id="@+id/relativ11"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-        <TextView
-            android:id="@+id/txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="@string/ourcoletion"
-            android:textColor="@color/light_gray"
-            android:textSize="@dimen/textsize"
-            android:textStyle="bold" />
-
-        <View
-            android:id="@+id/view1"
-            android:layout_width="wrap_content"
-            android:layout_height="1dip"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="7dip"
-            android:layout_marginTop="4dip"
-            android:layout_toLeftOf="@+id/txt"
-            android:background="@color/light_gray" />
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="wrap_content"
-            android:layout_height="1dip"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="7dip"
-
-            android:layout_toRightOf="@+id/txt"
-            android:background="@color/light_gray" />
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="0.9"
-        android:gravity="center_vertical"
-
-        android:orientation="horizontal">
-
-        <com.ts.mobilelab.goggles4u.utils.HorizontalListView
-            android:id="@+id/listview_collection"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </com.ts.mobilelab.goggles4u.utils.HorizontalListView>
-
-    </LinearLayout>
-   </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-
-        android:layout_height="wrap_content"
-
         android:id="@+id/reltive_nwlt"
-        android:visibility="gone"
-
-        android:layout_below="@+id/linearhome_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="128dp">
+        android:layout_below="@+id/linearhome_header"
+        android:layout_marginTop="128dp"
+        android:visibility="gone">
 
         <ImageView
+            android:id="@+id/imv_reload"
             android:layout_width="wrap_content"
             android:layout_height="100dip"
-            android:id="@+id/imv_reload"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/no_net_icon"
-            android:layout_centerHorizontal="true" />
+            android:src="@drawable/no_net_icon" />
 
         <TextView
+            android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/imv_reload"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dip"
             android:text="@string/nonet"
             android:textColor="@color/colorPrimary"
-            android:id="@+id/textView14"
-           android:layout_marginTop="8dip"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/imv_reload" />
+            android:textStyle="bold" />
     </RelativeLayout>
-</RelativeLayout>
+
+
+</LinearLayout>
