--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    android:id="@+id/list_bg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/nav_bg_grey_light"
+    android:background="@drawable/expandable_list_bg"
     android:gravity="center_vertical"
 
     android:orientation="horizontal"
@@ -25,7 +26,7 @@
         android:paddingLeft="24dip"
         android:text="@string/home"
         android:textColor="@color/deep_gray"
-        android:textSize="16sp"
+        android:textSize="@dimen/drawer_text_size"
         android:textStyle="normal" />
 
 </LinearLayout>
