--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/light_gray"
-    android:orientation="vertical"
-    android:paddingBottom="1dip">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/lblListItem"
@@ -12,11 +11,11 @@
         android:layout_height="wrap_content"
         android:background="@color/nav_bg_grey_dark"
         android:gravity="center_vertical"
-        android:padding="8dip"
+        android:padding="12dip"
         android:paddingLeft="80dip"
         android:paddingStart="80dip"
         android:text="dsdcsdsads"
-        android:textColor="@color/black"
+        android:textColor="@color/deep_gray"
 
         android:textSize="16sp" />
 
