--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/nav_bg_grey_light"
     android:gravity="top"
     android:orientation="vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -18,7 +18,7 @@
             android:id="@+id/tv_nav_profilename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dip"
+            android:layout_marginTop="36dip"
             android:layout_marginLeft="18dp"
             android:layout_marginStart="18dp"
             android:text="Hi Guest"
@@ -45,7 +45,7 @@
                 android:textStyle="bold" />
 
             <View
-                android:layout_width="20dp"
+                android:layout_width="10dp"
                 android:layout_height="match_parent"
                 android:background="@color/transparent" />
 
@@ -81,7 +81,7 @@
                 android:textStyle="bold" />
 
             <View
-                android:layout_width="20dp"
+                android:layout_width="10dp"
                 android:layout_height="match_parent"
                 android:background="@color/transparent" />
 
@@ -122,7 +122,7 @@
                 android:paddingLeft="24dip"
                 android:text="@string/home"
                 android:textColor="@color/deep_gray"
-                android:textSize="16sp"
+                android:textSize="@dimen/drawer_text_size"
                 android:textStyle="normal" />
 
         </LinearLayout>
@@ -136,7 +136,7 @@
         android:background="@color/white"
         android:choiceMode="singleChoice"
         android:dividerHeight="-1dip"
-        android:paddingBottom="4dip"></ExpandableListView>
+        android:childDivider="@color/transparent"/>
 
     <ProgressBar
         android:id="@+id/progressBar_banner"
@@ -147,7 +147,7 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="15dip"
-        android:background="@color/white" />
+        android:background="@color/nav_bg_grey_light" />
 
 
 </LinearLayout>
