--- a/app/src/main/res/layout/newarrival_listitem.xml
+++ b/app/src/main/res/layout/newarrival_listitem.xml
@@ -2,18 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:layout_marginTop="4dip"
+    android:background="@color/home_bg_grey"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         cardView.setRadius="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:layout_margin="5dip"
-        android:padding="8dip">
+        android:layout_width="180dp"
+        android:layout_height="164dp"
+        android:layout_margin="5dp"
+        android:layout_gravity="center">
 
 
         <LinearLayout
@@ -21,42 +18,55 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imv_newarrivalitem"
-                android:layout_width="128dip"
-                android:layout_height="92dip"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
-                android:layout_gravity="center"
-                android:layout_margin="3dip"
-                android:padding="8dip"
-                android:scaleType="centerCrop" />
-
-            <TextView
-                android:id="@+id/tv_newarrival"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imv_newarrivalitem"
-                android:gravity="center"
-                android:maxLines="1"
-                android:padding="2dp"
-                android:text="title"
-                android:textColor="#222"
-                android:textSize="13sp"
-                android:textStyle="bold" />
+                android:layout_height="0dp"
+                android:layout_weight="5">
 
-            <TextView
-                android:id="@+id/tv_newarrivalprice"
+                <ImageView
+                    android:id="@+id/imv_newarrivalitem"
+                    android:layout_width="128dp"
+                    android:layout_height="92dp"
+                    android:layout_centerInParent="true"
+                    android:padding="8dp"
+                    android:background="@drawable/ic_call"
+                    android:scaleType="centerCrop" />
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:background="@color/nav_bg_grey_dark"
+                android:layout_weight="2">
 
-                android:layout_below="@+id/tv_newarrival"
-                android:gravity="center"
-                android:padding="2dp"
-                android:text="description"
-                android:textColor="#666"
-                android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/tv_newarrival"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:padding="2dp"
+                    android:text="title"
+                    android:textColor="#222"
+                    android:textSize="13sp"
+                    android:textStyle="bold" />
 
+                <TextView
+                    android:id="@+id/tv_newarrivalprice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_below="@+id/tv_newarrival"
+                    android:gravity="center"
+                    android:padding="2dp"
+                    android:text="description"
+                    android:textColor="#666"
+                    android:textSize="10sp" />
+            </RelativeLayout>
+
+            <!--
+
+            -->
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
