--- a/app/src/main/res/layout/content_product_listing.xml
+++ b/app/src/main/res/layout/content_product_listing.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ts.mobilelab.goggles4u.ProductListingActivity"
     tools:showIn="@layout/activity_product_listing">
@@ -17,73 +16,97 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-
+        android:background="@color/darkgray"
         android:orientation="horizontal"
-        android:background="@color/light_gray"
         android:padding="4dip"
         android:weightSum="2">
 
-        <TextView
-            android:id="@+id/tv_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="1dip"
-            android:layout_weight="1"
-            android:background="@color/light_gray"
-            android:drawableLeft="@drawable/ic_filter_bar_24dp"
-            android:gravity="center"
-            android:padding="10dip"
+        <RelativeLayout
+            android:id="@+id/filter_rel"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
-            android:text="Filter"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/colorPrimary" />
+            <TextView
+                android:id="@+id/tv_filter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="FILTER"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/white" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="6dp"
+                android:layout_marginEnd="6dp"
+                android:layout_toLeftOf="@+id/tv_filter"
+                android:layout_toStartOf="@+id/tv_filter"
+                android:src="@drawable/ic_filter_bar_24dp" />
+        </RelativeLayout>
+
         <View
             android:id="@+id/views"
             android:layout_width="1dip"
-            android:layout_height="24dip"
+            android:layout_height="34dip"
             android:layout_gravity="center"
+            android:background="@color/white" />
 
-            android:background="@color/darkgray" />
-        <TextView
-            android:id="@+id/tv_sort"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="1dip"
-            android:layout_weight="1"
-            android:background="@color/light_gray"
-            android:drawableLeft="@drawable/ic_sort_24dp"
-            android:gravity="center"
-            android:padding="10dip"
-            android:text="Sort"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/colorPrimary" />
+        <RelativeLayout
+            android:id="@+id/sort_rel"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/tv_sort"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_centerInParent="true"
+                android:text="SORT"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/white" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_sort_24dp"
+                android:layout_marginRight="6dp"
+                android:layout_marginEnd="6dp"
+                android:layout_toStartOf="@+id/tv_sort"
+                android:layout_toLeftOf="@+id/tv_sort"/>
+        </RelativeLayout>
     </LinearLayout>
 
     <com.paging.gridview.PagingGridView
         android:id="@+id/gridView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/linearLayout"
-        android:layout_marginBottom="4dip"
-        android:layout_marginTop="7dp"
-        android:horizontalSpacing="5dip"
+        android:padding="6dp"
+        android:horizontalSpacing="6dip"
         android:numColumns="2"
+        android:scrollbars="none"
+        android:background="@color/light_gray"
+        android:verticalSpacing="6dip" />
 
-        android:verticalSpacing="5dip" />
     <TextView
         android:id="@+id/empty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:layout_gravity="left"
         android:gravity="center"
         android:padding="4dip"
         android:text="No data Found"
-        android:textColor="@color/colorPrimary"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:textColor="@color/colorPrimary" />
 
 
 </RelativeLayout>
