--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -108,10 +108,8 @@
             android:padding="8dip">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minHeight="30dip"
-                android:minWidth="30dip"
+                android:layout_width="@dimen/nav_image_size"
+                android:layout_height="@dimen/nav_image_size"
                 android:padding="4dip"
                 android:src="@drawable/ic_home_24dp" />
 
