--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="margin_top">80dip</dimen>
 
+    <dimen name="nav_image_size">36dp</dimen>
     <dimen name="tab_max_width">264dp</dimen>
     <dimen name="tab_padding_bottom">16dp</dimen>
     <dimen name="tab_label">14sp</dimen>
@@ -21,4 +22,5 @@
     <dimen name="dimen_80">80dp</dimen>
     <dimen name="dimen_100">100dp</dimen>
     <dimen name="drawer_text_size">14sp</dimen>
+    <dimen name="sort_dialog_left_margin">20dp</dimen>
 </resources>
